[project]
name = "matchers-metrics"
description = "Repository that implements a pipeline for evaluating matcher performance using precision, recall, and AUC metrics."
version = "1.0"
authors = [
    {name = "Lucas Benedetti", email = "contato.lucasbenedetti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/benedettilucas/matchers"

[tool.setuptools.packages.find]
include = ["matchers_metrics*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
 